Organize Dockerfile. Add ENV to display DGI_SOLR_SEARCH commit hash.